css worked perfectly

--- a/index.html
+++ b/index.html
@@ -8,11 +8,41 @@
     <title>RM Creation</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="images/fav2.png" type="image/x-icon">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
+    <section class="first-sec flexible-container">
+        <div class="half-width">
+            <h1>Welcome to</h1>
+            <h1><span class="org">Cretive</span> portfolio.</h1>
+            <h3>Professional Graphic Designer and Web Developer</h3>
+            <p>Hello everyone! This is Redwan, and i'm a Professional Graphic Designer, i'm doing this job for the last
+                two
+                years, but these time i'm gonna be so much interested on Web Development and Programming, even i was
+                interested
+                on this sector before! anyways, after all i entered on Mahbub bhai's course at 4th batch.</p>
+            <a target="_blank" class="link-button" href="https://www.fiverr.com/users/redwanmunna/seller_dashboard">HIRE
+                ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/red1.png" alt="This is my first picture">
+        </div>
+    </section>
+    <section>
+        <div>
+            <img src="images/red2.png" alt="This is my second image.">
+        </div>
+        <div>
+            <h1>My Big Dream</h1>
+            <h3>Become a Expert Web Developer.</h3>
+            <p>I know i'm a graphic designer, but i'm not feeling good in this sector, and loving programming a lot.
+                this is the sector where i belong! i'm really greatful that. i got the chance to do this course with
+                Jhankar Mahbub bhaiya.</p>
+        </div>
+    </section>
 </body>
 
 </html>
