--- a/index.html
+++ b/index.html
@@ -31,16 +31,36 @@
             <img src="images/red1.png" alt="This is my first picture">
         </div>
     </section>
-    <section>
-        <div>
+    <section class="second-sec flexible-container">
+        <div class="half-width">
             <img src="images/red2.png" alt="This is my second image.">
         </div>
-        <div>
+        <div class="half-width">
             <h1>My Big Dream</h1>
             <h3>Become a Expert Web Developer.</h3>
-            <p>I know i'm a graphic designer, but i'm not feeling good in this sector, and loving programming a lot.
+            <p class="p-sec">I know i'm a graphic designer, but i'm not feeling good in this sector, and loving
+                programming a lot.
                 this is the sector where i belong! i'm really greatful that. i got the chance to do this course with
                 Jhankar Mahbub bhaiya.</p>
+            <a target="_blank" class="link-button" href="https://www.fiverr.com/users/redwanmunna/seller_dashboard">READ
+                MORE</a>
+        </div>
+    </section>
+    <section class="final-sec">
+        <h1>Skills</h1>
+        <div class="flexible-container">
+            <div>
+                <h2>Adobe Illustrator</h2>
+                <p>Adobe illustrator is a very popular Graphic designing software, it's based on vector. most of the
+                    biggest
+                    brand identity projects done by this software, and it's very comfortable to use.</p>
+            </div>
+            <div>
+                <h2>Web Developer</h2>
+                <p>Hey there! i'm learning web development on Programming Hero, my instructor is Jhankar Mahbub bhai.
+                    he's
+                    really an amazing person. i enjoy his all classes. Thank you</p>
+            </div>
         </div>
     </section>
 </body>
