--- a/index.html
+++ b/index.html
@@ -49,20 +49,25 @@
     <section class="final-sec">
         <h1>Skills</h1>
         <div class="flexible-container">
-            <div>
+            <div id="first-skill" class="skill-items">
                 <h2>Adobe Illustrator</h2>
+                <h3 class="org">About my Illustration skill.</h3>
                 <p>Adobe illustrator is a very popular Graphic designing software, it's based on vector. most of the
                     biggest
                     brand identity projects done by this software, and it's very comfortable to use.</p>
             </div>
-            <div>
+            <div id="sec-skill" class="skill-items">
                 <h2>Web Developer</h2>
+                <h3 class="org">Learning web development.</h3>
                 <p>Hey there! i'm learning web development on Programming Hero, my instructor is Jhankar Mahbub bhai.
                     he's
                     really an amazing person. i enjoy his all classes. Thank you</p>
             </div>
         </div>
     </section>
+    <footer>
+        <p>© RM Creation 2021, a Design agency for branding.</p>
+    </footer>
 </body>
 
 </html>
